# sddf

./: .gitignore  README.md  build.zig  build.zig.zon
.github/workflows/: examples.yaml  pr.yaml
.reuse/: dep5
benchmark/: benchmark.c  benchmark_secondary.c
blk/components/: virt.c
blk/util/: bitarray.c  datastore.c  fsmalloc.c  util.c
ci/: README.md  examples.sh
drivers/blk/virtio/: block.c  block.h
drivers/clock/arm/: timer.c
drivers/clock/meson/: timer.c
drivers/network/imx/: ethernet.c
drivers/network/meson/: ethernet.c  miiphyutil.c  phy.c  realtek.c
drivers/network/virtio/: ethernet.c  ethernet.h
drivers/network/virtio-rs/: Cargo.toml  Makefile  ethernet.rs  hal.rs  test.sh
drivers/serial/arm/: config.json  default.json  meta.json  uart.c
drivers/serial/imx/: uart.c
drivers/serial/meson/: config.json  meta.json  uart.c
examples/blk/: Makefile  build.zig  client.c
examples/echo_server/: Makefile  echo_server.system  events.list  lwip.c  rust-toolchain.toml  utilization_socket.c
examples/i2c/: README.md  build.zig  client.h  pn532.c
examples/serial/: README.md  build.zig  serial_server.c
examples/timer/: Makefile  build.zig  build.zig.zon
examples/usdhc/: Makefile  client.c  usdhc.mk
include/sddf/blk/: mbr.h  (+3 more)
network/components/: arp.c  copy.c  lwip.c  mux_rx.c  mux_tx_bandwidth_limited.c  virt_rx.c  virt_tx.c
network/queue-rs/: Cargo.toml  test.sh
network/queue-rs/src/: lib.rs
serial/components/: default.json  virt_rx.c  virt_tx.c
sound/components/: virt.c
util/: cache.c  putchar_serial.c
util/include/: util.h
(+32 files in other folders)
