[package]
name = "sddf-net-queue"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
log = "0.4.17"
sel4-externally-shared = { git = "https://github.com/seL4/rust-sel4", features = ["unstable"] }
zerocopy = { version = "0.7.32", features = ["derive"] }

