[package]
name = "sddf-net-virtio-driver"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
log = "0.4.17"
sel4 = { git = "https://github.com/seL4/rust-sel4" }
sel4-externally-shared = { git = "https://github.com/seL4/rust-sel4", features = ["unstable"] }
sel4-immediate-sync-once-cell = { git = "https://github.com/seL4/rust-sel4" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4" }
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", default-features = false }
sel4-microkit-message = { git = "https://github.com/seL4/rust-sel4" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4" }
sel4-bounce-buffer-allocator = { git = "https://github.com/seL4/rust-sel4" }
sddf-net-queue = { path = "../../../network/queue-rs" }
virtio-drivers = { version = "0.5.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "sddf_net_virtio_driver"
path = "ethernet.rs"
